root cause of no display was pix clk divisor wrong

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,9 @@ framework = arduino
 upload_port = COM6
 upload_speed = 576000
 lib_deps = SPI
-; we want speed! remove Os, and add O3 to gcc build options
-build_unflags = -Os
-build_flags = -DCORE_DEBUG_LEVEL=0 -O3 -ffunction-sections -fdata-sections
+; we want speed! remove Os, and add O3 to gcc build options  //je loop times are the same
+; build_unflags = -Os
+; build_flags = -DCORE_DEBUG_LEVEL=0 -O3 -ffunction-sections -fdata-sections
 
 ;uncomment following to show full build commands
 ;pio settings set force_verbose Yes
