--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,5 @@ lib_deps = SPI
 
 ;uncomment following to show full build commands
 ;pio settings set force_verbose Yes
+
+;lib_extra_dirs = ~/Documents/Arduino/libraries
